# video-prompt-gen

./: .gitignore  README.md  pyproject.toml
src/conference_finder/: __init__.py  app.py  finder.py  storage.py
src/conference_finder/templates/: index.html
src/video_prompt_gen/: cli.py
